--- a/templates/pins/create.html.twig
+++ b/templates/pins/create.html.twig
@@ -5,10 +5,7 @@
 {% block body %}
 <h1 pl>Create Pin</h1>
 
-{{ form_start(form) }}
-{{ form_widget(form)}}
 
-<input type="submit" value="Create Pin">
-{{ form_end(form)}}
+{{ include('pins/_form.html.twig') }}
    
 {% endblock %}
