--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -3,36 +3,44 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <style>
-            .alert{
-                padding: 10px;
-                color: white;
-                text-align: center;
-            }
+        {% block stylesheets %}
+                <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">            
+                <style>
+                .alert{
+                    padding: 10px;
+                    color: white;
+                    text-align: center;
+                    margin: 0; 
+                    border: none;
+                    border-raduis: 0;
+                }
 
-            .alert-success {
-                background-color: green;
-            }
+                .alert-success {
+                    background-color: green;
+                }
 
-            .alert-error {
-                background-color: red;
-            }
+                .alert-error {
+                    background-color: red;
+                }
 
-            .alert-info {
-                background-color: blue;
-            }
-        </style>
+                .alert-info {
+                    background-color: blue;
+                }
+            </style>
+        {% endblock %}
+       
     </head>
     <body>
-       {{ include('layouts/partials/_flash_messages.html.twig')}}
-        <nav>
-            <ul>
-                <li><a href="{{ path('app_home') }}">Home</a></li>
-                <li><a href="{{ path('app_pins_create') }}">New Pin</a></li>
-            </ul>
-        </nav>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {{ include('layouts/partials/_flash_messages.html.twig')}}
+        {{ include('layouts/partials/_nav.html.twig') }}
+        <main role="main" class="container">
+            {% block body %}{% endblock %}
+        </main>
+        {{ include('layouts/partials/_footer.html.twig') }}
+        {% block javascripts %}
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.3/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+        {% endblock %}
     </body>
 </html>
