--- a/templates/pins/create.html.twig
+++ b/templates/pins/create.html.twig
@@ -3,9 +3,10 @@
 {% block title 'New Pin' %}
 
 {% block body %}
-<h1 pl>Create Pin</h1>
-
-
-{{ include('pins/_form.html.twig') }}
+<div class="row">
+    <div class="col-md-6 mx-auto">
+        <h1 pl>Create Pin</h1>
+        {{ include('pins/_form.html.twig') }}
+    </div>
    
 {% endblock %}
