--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -5,7 +5,11 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">            
+                <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
                 <style>
+                html,body{
+                    font-family: 'Montserrat', sans-serif;
+                }
                 .alert{
                     padding: 10px;
                     color: white;
