--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -1,36 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ app.request.locale }}">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Pantrest {% endblock %}</title>
         {% block stylesheets %}
-                <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">            
-                <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-                <style>
-                html,body{
-                    font-family: 'Montserrat', sans-serif;
-                }
-                .alert{
-                    padding: 10px;
-                    color: white;
-                    text-align: center;
-                    margin: 0; 
-                    border: none;
-                    border-raduis: 0;
-                }
-
-                .alert-success {
-                    background-color: green;
-                }
-
-                .alert-error {
-                    background-color: red;
-                }
-
-                .alert-info {
-                    background-color: blue;
-                }
-            </style>
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
        
     </head>
@@ -42,9 +16,7 @@
         </main>
         {{ include('layouts/partials/_footer.html.twig') }}
         {% block javascripts %}
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.3/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </body>
 </html>
