--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -28,3 +28,14 @@ html,body{
     }
 }
 
+.vich-image {
+    .form-check {
+        @extend .mt-3;
+    }
+    img {
+        @extend .mb-2;
+        @extend .rounded;
+        @extend .shadow;
+        @extend .img-thumbnail;
+    }
+}
