--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -3,13 +3,30 @@
 {% block title 'Find all the best pinns on earth!' %}
 
 {% block body %}
-<h1>{{ pluralize(1,'Pin') }} Pins</h1>
-
-    {% for pin in pins %}
-        <article>
-            <h2><a href="{{ path('app_pins_show', {id: pin.id})}}">{{ pin.title }}</a></h2>
-            <p>{{ pin.description| u.truncate(10, '....', false) }}</p>
-            <p>Submitted {{ pin.createdAt | ago }}</p>
-        </article>
+{% if pins|length > 0 %}
+<h1 class="mb-4 text-center text-muted">{{ pluralize(1,'Pin') }} Pins</h1>
+    
+    {% for row in pins|batch(3) %}
+        <div class="row mb-5">
+        {% for pin in row %}
+            <div class="col-md-4">
+                <article class="pin bg-white rounded shadow">
+                    <div class="mw-100 overfow-hidden">
+                        <a href="{{ path('app_pins_show', {id: pin.id})}}">
+                            <img src="{{ (pin.imageName ? vich_uploader_asset(pin) :
+                            asset('build/images/placeholeder.jpg'))  | imagine_filter('squared_thumbnail_medium') }}" alt="{{ pin.title}}"
+                             class="w-100 rounded-top" />
+                        </a>
+                    </div>
+                    <h2 class="pl-3 pt-3 h5"><a href="{{ path('app_pins_show', {id: pin.id})}}" class="text-secondary text-decoration-none">{{ pin.title }}</a></h2>
+                    <p class="pl-3 pb-3 text-muted"><small>Submitted [OWNER FULL NAME]</small></p>
+                </article>
+            </div>
+        {% endfor %}
+        </div>
     {% endfor %}
+{% else %}
+    <p class="mt-5 h1 text-center">No pins yet. <a href="{{ path('app_pins_create')}}"></a>
+    Be the first!</p>
+{% endif %}
 {% endblock %}
