--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -26,7 +26,7 @@
             <p class="mt-5 mb-3 text-center text-muted">
                 Already have an account? <a href="{{ path('app_login')}}">Log in</a>
             </p>
-            <button type="submit" class="btn btn-primary btn-lg btn-block">Register</button>
+            <button type="submit" class="btn btn-primary btn-lg btn-block" formnovalidate>Register</button>
         {{ form_end(registrationForm) }}
 
     </div>
