--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -9,6 +9,11 @@
        
     </head>
     <body>
+       {# {% if is_granted('IS_IMPERSONATOR') %}
+            <div class="alert alert-warnig">
+                <a href="{{ impersonation_exit_path(path('app_home')) }}">Exit impersonation</a>
+            </div>
+        {% endif %} #}
         {{ include('layouts/partials/_flash_messages.html.twig')}}
         {{ include('layouts/partials/_nav.html.twig') }}
         <main role="main" class="container">
